	NX-1345 (Add rule number to EPP export)
	NX-1347 (New agent parameter File.LineCount)


*
* 2.1.3
*

- Option to read log files using VSS snapshots on Windows
- Per stage confirmation in database manager during database check
- Fixed file download cancelation
- HTTPS support in SMSEagle driver
- New network map element - text box
- Improved audit logging on object creation
- Fixed issues: 
	NX-662 (New network map element - text box)
	NX-703 (Export/Import actions)
	NX-801 (Deleted nodes not removed from trusted nodes lists of other objects)
	NX-1045 (Add rack/chassis diagram as dashboard element)
	NX-1142 (Back view for racks)
	NX-1201 (Discovered node links on map should automatically be set to color based on the status of the interfaces shown in connector names)
	NX-1252 (Fix automatically generated transformation scripts for 64 bit interface counters)
	NX-1268 (Do DNS resolve for node names via zone proxy)
	NX-1336 (Cluster DCI Max/Min aggregation returns value from last node instead of expected max/min)
	NX-1339 (JIRA restricts subject field to 254 chars, helpdesk integration should trim alarm text or move reset of the message to issue description)
	NX-1341 (Scheduled tasks enabled/disabled indicator)
	NX-1342 (Increase text length limit in SMS sender)
	NX-1343 (Server crash on re-enabling temporary disabled user)
	NX-1344 (Search Bar for Agent Tunnel Manager)
	NX-1348 (Continuous warnings in server log: seed object 0 cannot be found)
	NX-1361 (Data type of transformation script's input value can be incorrect)


*
* 2.1.2
*

- Summary tables for table DCIs
- Multi-valued columns in summary tables
- Threshold violation events have current DCI value as parameter 8 (named as "dciValue")
- New agent configuration parameter TunnelKeepaliveInterval
- Optimizations in database access layer
- Improved database check procedure
- Management console:
	- Option to set root object for "Geo Map" dashboard element
	- Filter in geo map view